[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dlstarter_jonathanventura"
version = "0.0.6"
authors = [
  { name="Jonathan Ventura", email="jventu09@calpoly.edu" },
]
description = "Helpful utilities for deep learning experiments"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "torch",
    "tqdm",
    "mlxtend",
    "torchmetrics",
    "wget",
    "numpy",
    "scipy"
]

[project.urls]
Homepage = "https://github.com/jonathanventura/dlstarter"
Issues = "https://github.com/jonathanventura/dlstarter/issues"